# NURBS

./: .gitignore  .gitmodules  CMakeLists.txt  NURBS.cpp  NURBS.h  main.cpp
Test/: CMakeLists.txt  TestBSplineBasis.cpp  TestBSplineDerBasis.cpp  TestCurveDerivatives.cpp  TestCurvePoint.cpp  TestFindSpan.cpp  TestSurfaceDerivatives.cpp  TestSurfaceNormal.cpp  TestSurfacePoint.cpp
